[package]
name = "zap-macros"
version = "0.1.2"
authors = ["SharkBlocks00"]
edition = "2021"
license = "MIT"
description = "Zap module SDK macros"


[lib]
proc-macro = true

[dependencies]
zap-sdk = { path = "../zap-sdk", version = "0.1.1" }
syn = { version = "2", features = ["full"]}
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1.0.117"
